--- a/Nordstrom.ipynb
+++ b/Nordstrom.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -21,19 +21,24 @@
    },
    "outputs": [],
    "source": [
-    "#functions\n",
+    "#global functions\n",
     "def initDB():\n",
+    "    #initializes both women's and men's databases\n",
     "    conn = sqlite3.connect('nordstrom.db')\n",
     "    c = conn.cursor()\n",
-    "    c.execute('''CREATE TABLE nordstromW (Name,VendorName,Color,Price)''')\n",
+    "    \n",
+    "    c.execute('CREATE TABLE nordstromW (Name,VendorName,Color,Price)')\n",
+    "    conn.commit()\n",
+    "    c.execute('CREATE TABLE nordstromM (Name,VendorName,Color,Price)')\n",
     "    conn.commit()\n",
     "    conn.close()\n",
-    "\n",
+    "              \n",
     "def replaceChars(text):\n",
+    "    #wrapper around standard regexes to remove unusual characters\n",
     "    chars = [\n",
     "        ['\\xc3\\xa9','e'],\n",
     "        ['\\xc3\\xaa','e'],\n",
-    "        ['(&#174;)|(&#233;)|\\'|\\xc2\\xae',''],\n",
+    "        ['(&#174;)|(&#233;)|\\'|(\\xc2\\xae)|(\\xe2\\x84\\xa2)|(&#39;)',''],\n",
     "        ['(&amp;)|&','and'],\n",
     "        ['[\\/-]',' '],\n",
     "        [' \\(.*\\)',''],\n",
@@ -43,6 +48,7 @@
     "    for charSet in chars:\n",
     "        text = re.sub(charSet[0],charSet[1],text)\n",
     "    return(text)\n",
+    "              \n",
     "initDB()"
    ]
   },
@@ -50,123 +56,141 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#gets information for item URLs on all of women's pages\n",
-    "class wPages:\n",
+    "class Pages:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self.WomenProductURL = \"http://shop.nordstrom.com/c/all-womens-clothing?origin=leftnav\"\n",
-    "        self.wProductsHTML   = self.collectCompressHTML(self.WomenProductURL)\n",
-    "        self.MaxPages        = self.extractMaxPageNumber()\n",
-    "        self.pageURLs        = self.pageURLext()\n",
-    "        self.itemAA          = []\n",
+    "    def __init__(self,department):\n",
+    "        self.department = department\n",
+    "        self.URL = self.startingURL()\n",
+    "        self.ProductsHTML = self.collectCompressHTML(self.URL)\n",
+    "        self.MaxPages = self.extractMaxPageNumber()\n",
+    "        self.pageURLs = self.pageURLext()\n",
+    "        self.itemAA = []\n",
     "        self.extractItems()\n",
     "    \n",
+    "    def startingURL(self):\n",
+    "        #selects starting URL based on whether we are getting resources for Men or Women\n",
+    "        if self.department == \"W\":\n",
+    "            return(\"http://shop.nordstrom.com/c/all-womens-clothing?origin=leftnav\")\n",
+    "        else:\n",
+    "            return(\"http://shop.nordstrom.com/c/all-mens-sale?origin=leftnav\")\n",
+    "        \n",
     "    def collectCompressHTML(self,URL):\n",
+    "        #retrieves HTML then strips it of tabs, new line, and carriage characters\n",
     "        response = urllib.urlopen(URL)\n",
     "        text = response.read()\n",
     "        compressedHTML = re.sub(r\"[\\t\\n\\r]\",\"\",text.strip())\n",
     "        return(compressedHTML)\n",
     "\n",
     "    def extractMaxPageNumber(self):\n",
-    "        pageNums = re.findall('<ul class=\"product-results-pagination truncated-pagination\">.*</nav>',self.wProductsHTML)\n",
+    "        #extracts the maximum number of pages for the clothing department\n",
+    "        pageNums = re.findall('<ul class=\"product-results-pagination truncated-pagination\">.*</nav>',self.ProductsHTML)\n",
     "        pageNList = re.findall('data-page=\"(\\d{1,3})\"',pageNums[0])\n",
     "        for i in range(0,len(pageNList)):\n",
     "            pageNList[i] = int(pageNList[i])\n",
     "        return(max(pageNList))\n",
     "\n",
     "    def pageURLext(self):\n",
+    "        #creates list of page urls\n",
     "        pageURLs = []\n",
     "        for num in range(1,(self.MaxPages+1)):\n",
-    "            URL = 'http://shop.nordstrom.com/c/all-womens-clothing?origin=leftnav?sort=Feature&page=' + str(num)\n",
+    "            if self.department == \"W\":\n",
+    "                URL = 'http://shop.nordstrom.com/c/all-womens-clothing?page=' + str(num)\n",
+    "            else:\n",
+    "                URL = 'http://shop.nordstrom.com/c/sale-mens-clothing?page=' + str(num)\n",
     "            pageURLs.append(URL)\n",
     "       \n",
     "        return(pageURLs)\n",
     "\n",
-    "    ####get items and save URLs \n",
     "    def extractItems(self):\n",
+    "        #gets unique url parts for each item from a page\n",
     "        #for page in range(0,len(self.pageURLs)):\n",
-    "        for page in [0,1,2]: #this is for testing. it takes the first two pages\n",
+    "        for page in [0]: #this is for testing. it takes the first two pages\n",
     "            pageHTML = self.collectCompressHTML(self.pageURLs[page])\n",
     "            extractedResults = re.findall('<!-- Begin FashionResults -->(.*)<!-- End FashionResults -->',pageHTML)[0]\n",
     "            extractedURLs    = re.findall('href=\"(/s/[-a-z]*/\\d{6,8}.origin=category)\"',extractedResults)\n",
     "            URLs = self.itemURLCreate(extractedURLs)\n",
     "            self.itemAA.append(URLs)\n",
     "\n",
+    "        \n",
     "    def itemURLCreate(self,itemExtensions):\n",
+    "        #creates full urls for each item\n",
     "        newURLs = []\n",
     "        for i in itemExtensions:\n",
     "            URL = 'http://shop.nordstrom.com' + i\n",
     "            newURLs.append(URL)\n",
     "    \n",
     "        return(newURLs) \n",
-    "    \n",
-    "            \n",
-    "\n"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "class itemMD:\n",
     "    \n",
-    "    def __init__(self,URL):\n",
-    "        self.URL        = URL\n",
-    "        self.HTML       = self.collectCompressHTML()\n",
+    "    def __init__(self,URL,department):\n",
+    "        self.URL = URL\n",
+    "        self.department = department\n",
+    "        self.HTML = self.collectCompressHTML()\n",
     "        self.vendorName = self.vendorExtract()\n",
-    "        self.itemName   = self.nameExtract()\n",
-    "        self.itemID     = self.itemNumberExtract()\n",
-    "        self.itemPrice  = self.priceExtract()\n",
-    "        self.itemColor  = self.colorExtracter()\n",
-    "        self.sqliteConn = sqlite3.connect('nordstromW.db')\n",
-    "\n",
+    "        self.itemName = self.nameExtract()\n",
+    "        self.itemID = self.itemNumberExtract()\n",
+    "        self.itemPrice = self.priceExtract()\n",
+    "        self.itemColor = self.colorExtracter()\n",
     "        \n",
     "    def collectCompressHTML(self):\n",
+    "        #see above\n",
     "        response = urllib.urlopen(self.URL)\n",
     "        text = response.read()\n",
     "        HTML = re.sub(r\"[\\t\\n\\r]\",\"\",text.strip())\n",
     "        \n",
     "        return(HTML)\n",
     "\n",
-    "    #extracts vendor name from item page\n",
-    "    def vendorExtract(self):\n",
+    "   \n",
+    "    def vendorExtract(self): \n",
+    "        #extracts vendor name from item page\n",
     "        vendorName = re.findall('<section id=\"brand-title\".+><h2><a.+>(.*)</a></h2></section>',self.HTML)\n",
     "        vendorName = replaceChars(vendorName[0])\n",
     "        \n",
     "        return(vendorName)\n",
     "    \n",
-    "    #extracts names from item page\n",
+    "    \n",
     "    def nameExtract(self):\n",
+    "        #extracts names from item page\n",
     "        itemName = re.findall('<h1 itemprop=\"name\">(.*)</h1></section',self.HTML)\n",
     "        itemName = replaceChars(itemName[0])\n",
     "        \n",
     "        return(itemName)\n",
     "    \n",
-    "    #extract regular price from item page\n",
+    "    \n",
     "    def priceExtract(self):\n",
+    "        #extract regular price from item page\n",
     "        itemPrice = re.findall('regularPrice\":\"\\$([\\d,]{1,5}\\.\\d{2})\"',self.HTML)\n",
     "        try:\n",
     "            return(itemPrice[0])\n",
     "        except:\n",
     "            return(0)\n",
     "    \n",
-    "    #extracts item number from item page\n",
+    "    \n",
     "    def itemNumberExtract(self):\n",
+    "        #extracts item number from item page\n",
     "        itemID = re.findall('<div class=\"item-number-wrapper\">Item #(\\d+)</div>',self.HTML)\n",
     "        if not itemID:\n",
     "            itemID = ['']\n",
     "        return(itemID)\n",
     "    \n",
-    "    #extracts color from item page\n",
+    "    \n",
     "    def colorExtracter(self):\n",
+    "        #extracts color from item page\n",
     "        colorElement = re.findall('<option (selected=\"\\w{0,20}\" )?value=\"color-\\d{6,8}\">([\\w ]+)</option>',self.HTML)\n",
     "        colorElement = re.findall('value=\"color-\\d{6,8}\">([\\w ]+)</option>',self.HTML)\n",
     "        colorList = []\n",
@@ -180,22 +204,25 @@
     "            colorList = [''] \n",
     "        return(colorList)\n",
     "    \n",
-    "    \n",
-    "    #exports item properties as a string\n",
     "    def export(self):\n",
+    "        #exports item properties as a string\n",
     "        return([self.itemName,self.vendorName,self.itemID,self.itemPrice,self.itemColor])\n",
     "            \n",
-    "    def dbPopulate(self,db):\n",
-    "        conn = sqlite3.connect(db)\n",
+    "    def dbExecute(self):\n",
+    "        #executes sql to build database\n",
+    "        conn = sqlite3.connect('nordstrom.db')\n",
     "        c = conn.cursor()\n",
     "        \n",
     "        for color in self.itemColor:\n",
     "            record = [self.itemName,self.vendorName,color,self.itemPrice]\n",
-    "            c.execute(\"INSERT INTO nordstromW VALUES (?,?,?,?)\",record)\n",
-    "        \n",
+    "            if self.department == \"W\":\n",
+    "                c.execute(\"INSERT INTO nordstromW VALUES (?,?,?,?)\",record)\n",
+    "            else: \n",
+    "                c.execute(\"INSERT INTO nordstromM VALUES (?,?,?,?)\",record)\n",
+    "                \n",
     "        conn.commit()\n",
     "        conn.close()\n",
-    "            "
+    "        "
    ]
   },
   {
@@ -206,7 +233,8 @@
    },
    "outputs": [],
    "source": [
-    "nordstromWomen = wPages()"
+    "nordstromMen = Pages(\"M\")\n",
+    "nordstromWomen = Pages(\"W\")"
    ]
   },
   {
@@ -217,10 +245,16 @@
    },
    "outputs": [],
    "source": [
+    "for array in nordstromMen.itemAA:\n",
+    "    for item in array:\n",
+    "        IT = itemMD(item,\"M\")\n",
+    "        IT.dbExecute()\n",
+    "\n",
     "for array in nordstromWomen.itemAA:\n",
     "    for item in array:\n",
-    "        testIT = itemMD(item)\n",
-    "        testIT.dbPopulate('nordstrom.db')"
+    "        IT = itemMD(item,\"W\")\n",
+    "        IT.dbExecute()\n",
+    "        "
    ]
   },
   {
