notebook comment updates

--- a/NordstromDescStats.ipynb
+++ b/NordstromDescStats.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#This script is currently a work in progress\n",
+    "#more comments and data extraction to come!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -21,6 +33,16 @@
    },
    "outputs": [],
    "source": [
+    "#To process the data into these CSVs I used the following query in the 'nordstrom.db' SQLite database:\n",
+    "#    \n",
+    "#    .open nordstrom.db\n",
+    "#    .mode csv\n",
+    "#    .output <whichever dataset>.csv\n",
+    "#    SELECT * FROM <whichever table> WHERE Color != '' AND Price != 0.00 SORT BY Color;\n",
+    "#\n",
+    "#...and tadaa!, we've got two datasets to play with.\n",
+    "#More processing was done via Perl one liners to remove any lingering strange characters or lines.\n",
+    "\n",
     "menCsv = pd.DataFrame.from_csv('nordstromMen.csv')\n",
     "womenCsv = pd.DataFrame.from_csv('nordstromWomen.csv')"
    ]
@@ -43,10 +65,10 @@
     "    def pieces(self):\n",
     "        return(\n",
     "            [\n",
-    "            'Shirt','Polo','Shorts','Jacket','Jeans','Pants',\n",
-    "            'Trunks','Hoodie','Sweater','Sweatshirt','Trousers',\n",
-    "            'Pullover','Jersey','Top','Coat','Tank',\n",
-    "            'Jogger','Suit','Blazer','Vest','Chinos'\n",
+    "                'Shirt','Polo','Shorts','Jacket','Jeans','Pants',\n",
+    "                'Trunks','Hoodie','Sweater','Sweatshirt','Trousers',\n",
+    "                'Pullover','Jersey','Top','Coat','Tank',\n",
+    "                'Jogger','Suit','Blazer','Vest','Chinos'\n",
     "            ]\n",
     "        )\n",
     "    \n",
@@ -61,8 +83,10 @@
     "        \n",
     "    def patterns(self):\n",
     "        return(\n",
-    "            ['Stripe','Plaid','Graphic','Colorblock','Floral',\n",
-    "             'Houndstooth','Indigo','Contrast']\n",
+    "            [\n",
+    "                'Stripe','Plaid','Graphic','Colorblock','Floral',\n",
+    "                 'Houndstooth','Indigo','Contrast'\n",
+    "            ]\n",
     "        )\n",
     "    \n",
     "    def textures(self):\n",
