--- a/NordstromMining.ipynb
+++ b/NordstromMining.ipynb
@@ -266,7 +266,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Data is now safely stored in an SQLite database. Yay!"
+   ]
   }
  ],
  "metadata": {
