rendering link added for bokeh

--- a/NordstromDescStats.ipynb
+++ b/NordstromDescStats.ipynb
@@ -9,7 +9,9 @@
    "outputs": [],
    "source": [
     "#This script is currently a work in progress\n",
-    "#more comments and data extraction to come!"
+    "#more comments and data extraction to come!\n",
+    "#to properly render this notebook go to: \n",
+    "#    http://nbviewer.ipython.org/github/BEugeneSmith7/codingFashion/blob/master/NordstromDescStats.ipynb"
    ]
   },
   {
