--- a/NordstromDescStats.ipynb
+++ b/NordstromDescStats.ipynb
@@ -934,6 +934,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 9 PCA of Women's Clothing\n",
+    "In this figure the distribution of data points (for the analyzed features)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -969,6 +977,14 @@
    ],
    "source": [
     "dsM.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 10 PCA of Men's Clothing\n",
+    "Based on these values from the PCA of men's clothing we can see clustered data in the lower right-hand corner of the plot. This also supports our initial idea that men's clothing is less variable. "
    ]
   },
   {
