--- a/NordstromNotebook.ipynb
+++ b/NordstromNotebook.ipynb
@@ -21,10 +21,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A few notes first...\n",
-    "I wanted to keep this notebook as readable by a non-coder as possible so there's very little code. To check out the code go see the [GitHub repository](https://github.com/BEugeneSmith7/codingFashion/).\n",
-    "\n",
-    "The next bit of code sets notebook parameters and creates plot, all from one module so the code here is minimal. "
+    "#### A note first...\n",
+    "I wanted to keep this notebook as clean as possible so I tucked away most of the code into modules [here](https://github.com/BEugeneSmith7/codingFashion/)."
    ]
   },
   {
