--- a/NordstromNotebook.ipynb
+++ b/NordstromNotebook.ipynb
@@ -507,10 +507,10 @@
    "source": [
     "If you'd like to get in contact or check out some of my social media, that info is listed below:  \n",
     "  \n",
-    "    email: brianesmith11@gmail.com\n",
+    "    email: beugenesmith@gmail.com\n",
     "    linkedin: B. Eugene Smith\n",
     "    twitter: beugenesmith\n",
-    "    github: beugenesmith7\n",
+    "    github: beugenesmith\n",
     "    \n",
     "Cheers,  \n",
     "_Eugene_"
